'css: MyWorks, Sheet, MySkills, Contact, AboutMe and fix text overflow in Sheet page'

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,7 +1,7 @@
 .titleContact {
   -webkit-text-stroke: 2px #606887;
 
-  @media screen and (min-width: 640px) {
+  @media screen and (min-width: 1024px) {
     -webkit-text-stroke: 10px #606887;
   }
 }
