--- a/src/components/MySkills/MySkills.scss
+++ b/src/components/MySkills/MySkills.scss
@@ -1,7 +1,7 @@
 .titleMySkills{
   -webkit-text-stroke: 2px #606887;
 
-  @media screen and (min-width: 640px) {
+  @media screen and (min-width: 1024px) {
     -webkit-text-stroke: 10px #606887;
   }
 }
